# pptx-ooxml-engine

./: .gitignore  README.en.md  README.md  README.zh-CN.md  pyproject.toml
docs/: specification.md
docs/plans/: 2026-02-12-v1-1-placeholder-chart-layout.md  2026-02-12-v1-2-content-finishing-roadmap.md  2026-02-12-v1-3-chart-table-textlink.md  2026-02-12-v1-core-ops-implementation.md
examples/: run_examples.sh
examples/ops/: 01_template_only_generate.json  02_template_plus_reuse_library.json  README.md
src/pptx_ooxml_engine/: __init__.py  cli.py  engine.py  examples_runner.py  models.py  schema.py  verify.py
src/pptx_ooxml_engine/schemas/: ops.v1.json
tests/: test_api_surface.py  test_cli.py  test_engine.py  test_examples.py  test_examples_runner.py  test_models.py  test_schema.py  test_smoke.py
